--- a/Homepage.css
+++ b/Homepage.css
@@ -207,7 +207,7 @@ a{
 }
 
 
-
+/* 
 @media screen and (max-width :700px){
     .card{
         display: block;
@@ -226,7 +226,7 @@ a{
 
     }
     
-}
+} */
 
 
 
